--- a/index.html
+++ b/index.html
@@ -5,13 +5,24 @@
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
-        <!-- create a nav bar -->
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
+                <li><a href="work.html">Work Experience</a></li>
+                <li><a href="about.html">About Me</a></li>
+                <li><a href="projects.html">Projects</a></li>                
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
+        <div class="container">
+            <h1>Quick Intro</h1>
+            <div class="card">
+                <p>Welcome to my personal website! My name is <strong>Joseph Aoun</strong> and I am a student at the American University of Beirut
+                    studying Computer Science Engineering.I am an avid competitive programmer, having participated in numerous 
+                    contests like the Lebanese Collegiate Programming Contest (LCPC) and Arab Collegiate Programming Contest (ACPC).
+                    These experiences have strengthened my problem-solving skills and fueled my passion for software engineering.
+                    Feel free to check out my work experience, projects, and contact me if you have any questions!</p>
+                <img src="img/image_joseph.jpg" alt="Joseph Aoun">
+            </div>
+        </div>
     </body>
 </html>
