--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html>
     <head>
         <title>Home</title>
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <nav>
             <ul>
-                <li><a href="work.html">Work Experience</a></li>
-                <li><a href="about.html">About Me</a></li>
-                <li><a href="projects.html">Projects</a></li>                
                 <li><a href="contact.html">Contact</a></li>
+                <li><a href="work.html">Work Experience</a></li>
+                <li><a href="projects.html">Projects</a></li>                
+                <li><a href="index.html">About Me</a></li>
             </ul>
         </nav>
         <div class="container">
