done with about me page

--- a/index.html
+++ b/index.html
@@ -12,17 +12,23 @@
                 <li><a href="projects.html">Projects</a></li>                
                 <li><a href="index.html">About Me</a></li>
             </ul>
+            <hr> 
         </nav>
         <div class="container">
-            <h1>Quick Intro</h1>
             <div class="card">
-                <p>Welcome to my personal website! My name is <strong>Joseph Aoun</strong> and I am a student at the American University of Beirut
-                    studying Computer Science Engineering.I am an avid competitive programmer, having participated in numerous 
-                    contests like the Lebanese Collegiate Programming Contest (LCPC) and Arab Collegiate Programming Contest (ACPC).
-                    These experiences have strengthened my problem-solving skills and fueled my passion for software engineering.
-                    Feel free to check out my work experience, projects, and contact me if you have any questions!</p>
+                <div class="card-content">
+                    <p>Welcome to my personal website! My name is <strong>Joseph Aoun</strong> and I am a student at the American University of Beirut
+                        studying Computer Science Engineering. I am an avid competitive programmer, having participated in numerous
+                        contests like the Lebanese Collegiate Programming Contest (LCPC) and Arab Collegiate Programming Contest (ACPC).
+                        These experiences have strengthened my problem-solving skills and fueled my passion for software engineering.
+                        Feel free to check out my work experience, projects, and contact me if you have any questions!</p>
+                    <div class="social-links">
+                        <a href="https://www.linkedin.com/in/joseph-aoun-5242bb254?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">LinkedIn</a>
+                        <a href="https://github.com/joseph-aoun" target="_blank">GitHub</a>
+                    </div>
+                </div>
                 <img src="img/image_joseph.jpg" alt="Joseph Aoun">
             </div>
-        </div>
+        </div>  
     </body>
 </html>
