--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
     <head>
         <title>Home</title>
         <link rel="stylesheet" href="style.css">
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <nav>
             <ul>
                 <li><a href="contact.html">Contact</a></li>
-                <li><a href="work.html">Work Experience</a></li>
+                <li><a href="work-experience.html">Work Experience</a></li>
                 <li><a href="projects.html">Projects</a></li>                
                 <li><a href="index.html">About Me</a></li>
             </ul>
@@ -17,7 +19,7 @@
         <div class="container">
             <div class="card">
                 <div class="card-content">
-                    <p>Welcome to my personal website! My name is <strong>Joseph Aoun</strong> and I am a student at the American University of Beirut
+                    <p>Welcome to my personal website! My name is <strong>Joseph Aoun</strong> and I am a student at the American University of Beirut and an exchange student at Boston University
                         studying Computer Science Engineering. I am an avid competitive programmer, having participated in numerous
                         contests like the Lebanese Collegiate Programming Contest (LCPC) and Arab Collegiate Programming Contest (ACPC).
                         These experiences have strengthened my problem-solving skills and fueled my passion for software engineering.
@@ -31,4 +33,7 @@
             </div>
         </div>  
     </body>
+    <footer>
+        <p>&copy; 2021 Joseph Aoun</p>
+    </footer>
 </html>
