fixed some stuff now working on projects part

--- a/html-content/work-experience.html
+++ b/html-content/work-experience.html
@@ -53,8 +53,9 @@
                 <div class="card-content">
                     <ul>
                         <li>Instructed 30+ students in "Introduction to Python," covering essential programming concepts and practical applications.</li>
-                        <li>Assisted with "Design and Analysis of Algorithms" for 150+ students, focusing on complex algorithmic strategies and problem-solving techniques.</li>
-                        <li>Managed grading for quizzes, homework, and exams, ensuring accuracy and fairness in assessments.</li>
+                        <li>Held office Hours for "Design and Analysis of Algorithms" (150+ students), focusing on complex algorithmic strategies and problem-solving techniques.</li>
+                        <li>Created exams with the professor and graded homework and quizzes.</li>
+                        <li>Contributed to the implementation of the first auto-grading project for the course.</li>
                     </ul>
                 </div>
             </div>
