--- a/html-content/index.html
+++ b/html-content/index.html
@@ -29,7 +29,7 @@
                         <a href="https://github.com/joseph-aoun" target="_blank">GitHub</a>
                     </div>
                 </div>
-                <img src="img/image_joseph.jpg" alt="Joseph Aoun">
+                <img src="../img/image_joseph.jpg" alt="Joseph Aoun">
             </div>
         </div>  
     </body>
