--- a/contact.html
+++ b/contact.html
@@ -9,10 +9,10 @@
     <body>
         <nav>
             <ul>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="work-experience.html">Work Experience</a></li>
-                <li><a href="projects.html">Projects</a></li>                
-                <li><a href="index.html">About Me</a></li>
+                <li><a href="contact">Contact</a></li>
+                <li><a href="work-experience">Work Experience</a></li>
+                <li><a href="projects">Projects</a></li>
+                <li><a href="index">About Me</a></li>
             </ul>
             <hr> 
         </nav>
@@ -41,6 +41,7 @@
             </div>
         </div>
         <script src="script.js"></script>
+
     </body>
     <footer>
         <p>&copy; 2021 Joseph Aoun</p>
