--- a/assignments.html
+++ b/assignments.html
@@ -19,15 +19,15 @@
         <div class="container_">
             <div class="card">
                 <div class="card-header">
-                    <h2>Tiny ML Intern</h2>
-                    <h3>Ubilite (June 2024 - August 2024)</h3>
+                    <h2>HOTEL RESERVATION SYSTEM</h2>
                 </div>
                 <div class="card-content">
                     <ul>
-                        <li>Developed a tinyML CNN model optimized for Ubilite's proprietary microchip (< 200 KB of SRAM).</li>
-                        <li>Utilized TensorFlow and its optimization toolkit to compress a MobileNet model to 140KB, achieving 93% accuracy on Imagenette.</li>
-                        <li>Enhanced model efficiency through advanced techniques in TensorFlow Model Optimization Toolkit -- quantization and weight clustering.</li>
+                        <li>Developed a full-stack web application using Python-Flask and SQLite, with a responsive HTML/CSS front-end.</li>
+                        <li>Proficiently incorporated an array of features, including email verification, availability checks, reservation modifications, and addi-
+                            tional functionalities.</li>
                     </ul>
+                    <a href="HTTPS://GITHUB.COM/JOSEPH-AOUN/EECE-351" target="_blank">GitHub</a>
                 </div>
             </div>
             
