working on dummy assignment 0

--- a/assignments.html
+++ b/assignments.html
@@ -17,17 +17,17 @@
             <hr> 
         </nav>
         <div class="container_">
+
+            <!-- homework 0 -->
             <div class="card">
                 <div class="card-header">
-                    <h2>HOTEL RESERVATION SYSTEM</h2>
+                    <h2>Assignment 0: Dummy Python Script</h2>
                 </div>
                 <div class="card-content">
                     <ul>
-                        <li>Developed a full-stack web application using Python-Flask and SQLite, with a responsive HTML/CSS front-end.</li>
-                        <li>Proficiently incorporated an array of features, including email verification, availability checks, reservation modifications, and addi-
-                            tional functionalities.</li>
+                        <li>Task: Write a Python script that adds two numbers and prints their sum</li>
                     </ul>
-                    <a href="HTTPS://GITHUB.COM/JOSEPH-AOUN/EECE-351" target="_blank">GitHub</a>
+                    <a href="https://github.com/joseph-aoun/joseph04-assignment-0" target="_blank">Github Link</a>
                 </div>
             </div>
             
