--- a/assignments.html
+++ b/assignments.html
@@ -30,6 +30,19 @@
                     <a href="https://github.com/joseph-aoun/joseph04-assignment-0" target="_blank">Github Link</a>
                 </div>
             </div>
+
+            <!-- homework 1 -->
+            <div class="card">
+                <div class="card-header">
+                    <h2>Assignment 1: Data Collection and Analysis</h2>
+                </div>
+                <div class="card-content">
+                    <ul>
+                        <li>Task: Analyzed elevator appearance time and proposed a position that minimizes the distance to all elevators based on their probability of showing up.</li>
+                    </ul>
+                    <a href="https://github.com/joseph-aoun/joseph04-assignment-1" target="_blank">Github Link</a>
+                </div>
+            </div>
             
         </div>
     </body>
