aded youtube demo link

--- a/assignments.html
+++ b/assignments.html
@@ -54,6 +54,7 @@
                         <li>Task: Build a website to visualize KMeans algorithm.</li>
                     </ul>
                     <a href="https://github.com/joseph-aoun/joseph04-assignment-2" target="_blank">Github Link</a>
+                    <a href="https://youtu.be/FFvV6P7rH_I" target="_blank">Youtube Demo</a>
                 </div>
             </div>
             
