KMeans project was added

--- a/projects.html
+++ b/projects.html
@@ -18,19 +18,34 @@
         </nav>
         <div class="container_">
 
-            <div class="card">
+            <div class="card"></div>
                 <div class="card-header">
-                    <h2>HOTEL RESERVATION SYSTEM</h2>
+                    <h2>KMeans Visualization</h2>
                 </div>
                 <div class="card-content">
                     <ul>
-                        <li>Developed a full-stack web application using Python-Flask and SQLite, with a responsive HTML/CSS front-end.</li>
-                        <li>Proficiently incorporated an array of features, including email verification, availability checks, reservation modifications, and addi-
-                            tional functionalities.</li>
+                        
                     </ul>
-                    <a href="HTTPS://GITHUB.COM/JOSEPH-AOUN/EECE-351" target="_blank">GitHub</a>
+                    <a href="https://github.com/joseph-aoun/joseph04-assignment-2" target="_blank">Github Link</a>
+                    <a href="https://youtu.be/FFvV6P7rH_I" target="_blank">Youtube Demo</a>
                 </div>
             </div>
+
+            <div class="card">
+                <div class="card-header">
+                    <h2>KMeans Visualization Project</h2>
+                </div>
+                <div class="card-content">
+                    <ul>
+                        <li>Built a full-stack app with <strong>React</strong> (frontend) and <strong>Flask</strong> (backend) to visualize KMeans clustering.</li>
+                        <li>Used <strong>Plotly.js</strong> for interactive visualizations and <strong>Python</strong> to implement KMeans with different initialization methods.</li>
+                        <li>Added manual centroid selection and step-by-step clustering visualization.</li>
+                        <li>Ensured cross-platform compatibility (Windows/macOS) with a responsive UI.</li>
+                    </ul>
+                    <a href="https://github.com/joseph-aoun/joseph04-assignment-2" target="_blank">GitHub</a>
+                    <a href="https://youtu.be/FFvV6P7rH_I" target="_blank">YouTube Demo</a>
+                </div>
+            </div>            
 
             <div class="card">
                 <div class="card-header">
