added hotel reservation

--- a/projects.html
+++ b/projects.html
@@ -32,7 +32,7 @@
                     <a href="https://github.com/joseph-aoun/joseph04-assignment-2" target="_blank">GitHub</a>
                     <a href="https://youtu.be/FFvV6P7rH_I" target="_blank">YouTube Demo</a>
                 </div>
-            </div>            
+            </div>
 
             <div class="card">
                 <div class="card-header">
@@ -47,6 +47,34 @@
                     <a href="HTTPS://GITHUB.COM/JOSEPH-AOUN/PARSER" target="_blank">GitHub</a>
                 </div>
             </div>
+
+            <div class="card">
+                <div class="card-header">
+                    <h2>Hotel Reservation System</h2>
+                </div>
+                <div class="card-content">
+                    <ul>
+                        <li>Developed a full-stack web application using <strong>Python-Flask</strong> and <strong>SQLite</strong>, with a responsive <strong>HTML/CSS</strong> front-end.</li>
+                        <li>Implemented features like email verification, availability checks, reservation modifications, and additional functionalities.</li>
+                    </ul>
+                    <a href="https://github.com/joseph-aoun/EECE-351" target="_blank">GitHub</a>
+                    <p><strong>October 2022 - January 2023</strong></p>
+                </div>
+            </div>
+            
+            <div class="card">
+                <div class="card-header">
+                    <h2>Hotel Reservation System</h2>
+                </div>
+                <div class="card-content">
+                    <ul>
+                        <li>Developed a full-stack web application using <strong>Python-Flask</strong> and <strong>SQLite</strong>, with a responsive <strong>HTML/CSS</strong> front-end.</li>
+                        <li>Implemented features like email verification, availability checks, reservation modifications, and additional functionalities.</li>
+                    </ul>
+                    <a href="https://github.com/joseph-aoun/EECE-351" target="_blank">GitHub</a>
+                    <p><strong>October 2022 - January 2023</strong></p>
+                </div>
+            </div>                        
 
             <div class="card">
                 <div class="card-header">
