added chinese character project

--- a/projects.html
+++ b/projects.html
@@ -36,6 +36,21 @@
 
             <div class="card">
                 <div class="card-header">
+                    <h2>Chinese Character Predictor</h2>
+                </div>
+                <div class="card-content">
+                    <ul>
+                        <li>Built a character-level language model to predict the next Chinese character based on the english pronunciation in a sequence using <strong>Python</strong>.</li>
+                        <li>Trained the model using <strong>a n-gram language model</strong> for learning-based text prediction.</li>
+                        <li>Implemented preprocessing techniques to handle Chinese text data and optimize model performance and achieved a 90% accuracy on the test data.</li>
+                    </ul>
+                    <a href="https://github.com/joseph-aoun/Chinese-Character-Predictor" target="_blank">GitHub</a>
+                </div>
+            </div>
+            
+
+            <div class="card">
+                <div class="card-header">
                     <h2>Lexical Analyzer/Compiler</h2>
                 </div>
                 <div class="card-content">
