--- a/assignments.html
+++ b/assignments.html
@@ -57,8 +57,22 @@
                     <a href="https://youtu.be/FFvV6P7rH_I" target="_blank">Youtube Demo</a>
                 </div>
             </div>
-            
         </div>
+
+        <!-- homework 3 -->
+        <div class="card">
+            <div class="card-header">
+                <h2>Assignment 3: SVD from scratch</h2>
+            </div>
+            <div class="card-content">
+                <ul>
+                    <li>Task: Implement SVD Algorithm from scratch.</li>
+                </ul>
+                <a href="https://github.com/joseph-aoun/joseph04-assignment-3" target="_blank">Github Link</a>
+            </div>
+        </div>
+    </div>
+
     </body>
     <footer>
         <p>&copy; 2021 Joseph Aoun</p>
