--- a/assignments.html
+++ b/assignments.html
@@ -72,6 +72,20 @@
             </div>
             
         </div>
+
+        <!-- homework 4 -->
+        <div class="card">
+            <div class="card-header">
+                <h2>Assignment 4: Latent Semantic Analysis </h2>
+            </div>
+            <div class="card-content">
+                <ul>
+                    <li>Task: Implement LSA Algorithm from scratch.</li>
+                </ul>
+                <a href="https://github.com/joseph-aoun/joseph04-assignment-4" target="_blank">Github Link</a>
+                <a href="https://youtu.be/W0FO-oCX6-o" target="_blank">Youtube Demo</a>
+            </div>
+        </div>
         
     </body>
     <footer>
