--- a/assignments.html
+++ b/assignments.html
@@ -71,7 +71,7 @@
                 </div>
             </div>
             
-            <!-- homework 4 -->
+        <!-- homework 4 -->
         <div class="card">
             <div class="card-header">
                 <h2>Assignment 4: Latent Semantic Analysis </h2>
@@ -85,7 +85,21 @@
             </div>
         </div>
 
+        <!-- homework 5 -->
+        <div class="card">
+            <div class="card-header">
+                <h2>Assignment 5: KNN Kaggle Competition</h2>
+            </div>
+            <div class="card-content">
+                <ul>
+                    <li>Task: Implement KNN from scratch and fit it on the dataset.</li>
+                </ul>
+                <a href="https://github.com/joseph-aoun/joseph04-assignment-5" target="_blank">Github Link</a>
+            </div>
         </div>
+
+        </div>
+
         
     </body>
     <footer>
