--- a/assignments.html
+++ b/assignments.html
@@ -98,6 +98,19 @@
             </div>
         </div>
 
+        <!-- midterm -->
+        <div class="card">
+            <div class="card-header">
+                <h2>Midterm: Amazon Kaggle Competition</h2>
+            </div>
+            <div class="card-content">
+                <ul>
+                    <li>Task: Predict user star prediction based on review.</li>
+                </ul>
+                <a href="https://github.com/joseph-aoun/joseph04-midterm" target="_blank">Github Link</a>
+            </div>
+        </div>
+
         </div>
 
         
