--- a/assignments.html
+++ b/assignments.html
@@ -113,7 +113,19 @@
 
         </div>
 
-        
+        <!-- homework 5 -->
+        <div class="card">
+            <div class="card-header">
+                <h2>Assignment 5: KNN Kaggle Competition</h2>
+            </div>
+            <div class="card-content">
+                <ul>
+                    <li>Task: Implement KNN from scratch and fit it on the dataset.</li>
+                </ul>
+                <a href="https://github.com/joseph-aoun/joseph04-assignment-7" target="_blank">Github Link</a>
+                <a href="https://youtu.be/lrVMBr7LJPw" target="_blank">Youtube Demo</a>
+            </div>
+        </div>
     </body>
     <footer>
         <p>&copy; 2021 Joseph Aoun</p>
