--- a/assignments.html
+++ b/assignments.html
@@ -114,11 +114,11 @@
         <!-- homework 7 -->
         <div class="card">
             <div class="card-header">
-                <h2>Assignment 5: KNN Kaggle Competition</h2>
+                <h2>Assignment 7: Linear Regression hypothesis testing</h2>
             </div>
             <div class="card-content">
                 <ul>
-                    <li>Task: Implement KNN from scratch and fit it on the dataset.</li>
+                    <li>Task: Implement linear regression model with confidence interval and p-value estimates</li>
                 </ul>
                 <a href="https://github.com/joseph-aoun/joseph04-assignment-7" target="_blank">Github Link</a>
                 <a href="https://youtu.be/lrVMBr7LJPw" target="_blank">Youtube Demo</a>
