--- a/assignments.html
+++ b/assignments.html
@@ -124,7 +124,22 @@
                 <a href="https://youtu.be/lrVMBr7LJPw" target="_blank">Youtube Demo</a>
             </div>
         </div>
+        
+        <!-- homework 8 -->
+        <div class="card">
+            <div class="card-header">
+                <h2>Assignment 8: Logistic regression</h2>
+            </div>
+            <div class="card-content">
+                <ul>
+                    <li>Task: Visualize logistic regression effects as we add more separation between 2 clusters</li>
+                </ul>
+                <a href="https://github.com/joseph-aoun/joseph04-assignment-8" target="_blank">Github Link</a>
+                <a href="https://youtu.be/5-t8JxK8ffQ" target="_blank">Youtube Demo</a>
+            </div>
+        </div>
 
+        
         </div>
 
     </body>
