updated some stuff

--- a/work-experience.html
+++ b/work-experience.html
@@ -67,6 +67,9 @@
                 </div>
                 <div class="card-content">
                     <ul>
+                        <li>Silver medalist twice in Lebanese Collegiate Programming Contest</li>
+                        <li>Ranked 1st in the US and 14th in the world at IEEEXtreme competition ( > 8500 teams )</li>
+                        <li>Representing Boston University's competitive programming team, securing 5th place at North East North America ICPC, and making it to nationals NAQ 2025</li>
                         <li>Competed in the Arab Collegiate Programming Contest (ACPC) and other notable contests, refining advanced problem-solving and coding abilities.</li>
                         <li>Technical Officer, ACM Club: Organized and managed competitive programming contests, enhancing the club's visibility and engagement.</li>
                         <li>Conducted workshops and training sessions for students on competitive programming, improving their problem-solving and coding skills.</li>
