homework 9 is doneeee

--- a/assignments.html
+++ b/assignments.html
@@ -139,6 +139,20 @@
             </div>
         </div>
 
+        <!-- homework 9 -->
+        <div class="card">
+            <div class="card-header">
+                <h2>Assignment 9: Neural Network Visualization</h2>
+            </div>
+            <div class="card-content">
+                <ul>
+                    <li>Task: Visualize decision boundary and hidden layer feature space for a circular dataset with different activation functions</li>
+                </ul>
+                <a href="https://github.com/joseph-aoun/joseph04-assignment-9" target="_blank">Github Link</a>
+                <a href="https://youtu.be/5-t8JxK8ffQ" target="_blank">Youtube Demo</a>
+            </div>
+        </div>
+
         
         </div>
 
