--- a/assignments.html
+++ b/assignments.html
@@ -153,6 +153,33 @@
             </div>
         </div>
 
+        <!-- homework 10 -->
+        <div class="card">
+            <div class="card-header">
+                <h2>Assignment 10: PCA and embeddings</h2>
+            </div>
+            <div class="card-content">
+                <ul>
+                    <li>Use CLIP embeddings and PCA to find the most similar image to a user query</li>
+                </ul>
+                <a href="https://github.com/joseph-aoun/joseph04-assignment-10" target="_blank">Github Link</a>
+                <a href="https://www.youtube.com/watch?v=MzReF39xu8w" target="_blank">Youtube Demo</a>
+            </div>
+        </div>
+
+        <!-- Extra Points -->
+        <div class="card">
+            <div class="card-header">
+                <h2>Extra Points</h2>
+            </div>
+            <div class="card-content">
+                <ul>
+                    <li>Task: Extra Midterm to predict credict card fraud</li>
+                </ul>
+                <a href="https://github.com/joseph-aoun/extra-credit" target="_blank">Github Link</a>
+            </div>
+        </div>
+
         
         </div>
 
