--- a/assignments.html
+++ b/assignments.html
@@ -21,39 +21,39 @@
             <!-- homework 0 -->
             <div class="card">
                 <div class="card-header">
-                    <h2>Assignment 0: Dummy Python Script</h2>
+                    <h2>Project 0: Dummy Python Script</h2>
                 </div>
                 <div class="card-content">
                     <ul>
                         <li>Task: Write a Python script that adds two numbers and prints their sum</li>
                     </ul>
-                    <a href="https://github.com/joseph-aoun/joseph04-assignment-0" target="_blank">Github Link</a>
+                    <a href="https://github.com/joseph-aoun/joseph04-Project-0" target="_blank">Github Link</a>
                 </div>
             </div>
 
             <!-- homework 1 -->
             <div class="card">
                 <div class="card-header">
-                    <h2>Assignment 1: Data Collection and Analysis</h2>
+                    <h2>Project 1: Data Collection and Analysis</h2>
                 </div>
                 <div class="card-content">
                     <ul>
                         <li>Task: Analyzed elevator appearance time and proposed a position that minimizes the distance to all elevators based on their probability of showing up.</li>
                     </ul>
-                    <a href="https://github.com/joseph-aoun/joseph04-assignment-1" target="_blank">Github Link</a>
+                    <a href="https://github.com/joseph-aoun/joseph04-Project-1" target="_blank">Github Link</a>
                 </div>
             </div>
 
             <!-- homework 2 -->
             <div class="card">
                 <div class="card-header">
-                    <h2>Assignment 2: KMeans Visualization</h2>
+                    <h2>Project 2: KMeans Visualization</h2>
                 </div>
                 <div class="card-content">
                     <ul>
                         <li>Task: Build a website to visualize KMeans algorithm.</li>
                     </ul>
-                    <a href="https://github.com/joseph-aoun/joseph04-assignment-2" target="_blank">Github Link</a>
+                    <a href="https://github.com/joseph-aoun/joseph04-Project-2" target="_blank">Github Link</a>
                     <a href="https://youtu.be/FFvV6P7rH_I" target="_blank">Youtube Demo</a>
                 </div>
             </div>
@@ -61,26 +61,26 @@
             <!-- homework 3 -->
             <div class="card">
                 <div class="card-header">
-                    <h2>Assignment 3: SVD from scratch</h2>
+                    <h2>Project 3: SVD from scratch</h2>
                 </div>
                 <div class="card-content">
                     <ul>
                         <li>Task: Implement SVD Algorithm from scratch.</li>
                     </ul>
-                    <a href="https://github.com/joseph-aoun/joseph04-assignment-3" target="_blank">Github Link</a>
+                    <a href="https://github.com/joseph-aoun/joseph04-Project-3" target="_blank">Github Link</a>
                 </div>
             </div>
             
         <!-- homework 4 -->
         <div class="card">
             <div class="card-header">
-                <h2>Assignment 4: Latent Semantic Analysis </h2>
+                <h2>Project 4: Latent Semantic Analysis </h2>
             </div>
             <div class="card-content">
                 <ul>
                     <li>Task: Implement LSA Algorithm from scratch.</li>
                 </ul>
-                <a href="https://github.com/joseph-aoun/joseph04-assignment-4" target="_blank">Github Link</a>
+                <a href="https://github.com/joseph-aoun/joseph04-Project-4" target="_blank">Github Link</a>
                 <a href="https://youtu.be/W0FO-oCX6-o" target="_blank">Youtube Demo</a>
             </div>
         </div>
@@ -88,20 +88,20 @@
         <!-- homework 5 -->
         <div class="card">
             <div class="card-header">
-                <h2>Assignment 5: KNN Kaggle Competition</h2>
+                <h2>Project 5: KNN Kaggle Competition</h2>
             </div>
             <div class="card-content">
                 <ul>
                     <li>Task: Implement KNN from scratch and fit it on the dataset.</li>
                 </ul>
-                <a href="https://github.com/joseph-aoun/joseph04-assignment-5" target="_blank">Github Link</a>
+                <a href="https://github.com/joseph-aoun/joseph04-Project-5" target="_blank">Github Link</a>
             </div>
         </div>
 
         <!-- midterm -->
         <div class="card">
             <div class="card-header">
-                <h2>Midterm: Amazon Kaggle Competition</h2>
+                <h2>Amazon Kaggle Competition</h2>
             </div>
             <div class="card-content">
                 <ul>
@@ -114,13 +114,13 @@
         <!-- homework 7 -->
         <div class="card">
             <div class="card-header">
-                <h2>Assignment 7: Linear Regression hypothesis testing</h2>
+                <h2>Project 7: Linear Regression hypothesis testing</h2>
             </div>
             <div class="card-content">
                 <ul>
                     <li>Task: Implement linear regression model with confidence interval and p-value estimates</li>
                 </ul>
-                <a href="https://github.com/joseph-aoun/joseph04-assignment-7" target="_blank">Github Link</a>
+                <a href="https://github.com/joseph-aoun/joseph04-Project-7" target="_blank">Github Link</a>
                 <a href="https://youtu.be/lrVMBr7LJPw" target="_blank">Youtube Demo</a>
             </div>
         </div>
@@ -128,13 +128,13 @@
         <!-- homework 8 -->
         <div class="card">
             <div class="card-header">
-                <h2>Assignment 8: Logistic regression</h2>
+                <h2>Project 8: Logistic regression</h2>
             </div>
             <div class="card-content">
                 <ul>
                     <li>Task: Visualize logistic regression effects as we add more separation between 2 clusters</li>
                 </ul>
-                <a href="https://github.com/joseph-aoun/joseph04-assignment-8" target="_blank">Github Link</a>
+                <a href="https://github.com/joseph-aoun/joseph04-Project-8" target="_blank">Github Link</a>
                 <a href="https://youtu.be/5-t8JxK8ffQ" target="_blank">Youtube Demo</a>
             </div>
         </div>
@@ -142,13 +142,13 @@
         <!-- homework 9 -->
         <div class="card">
             <div class="card-header">
-                <h2>Assignment 9: Neural Network Visualization</h2>
+                <h2>Project 9: Neural Network Visualization</h2>
             </div>
             <div class="card-content">
                 <ul>
                     <li>Task: Visualize decision boundary and hidden layer feature space for a circular dataset with different activation functions</li>
                 </ul>
-                <a href="https://github.com/joseph-aoun/joseph04-assignment-9" target="_blank">Github Link</a>
+                <a href="https://github.com/joseph-aoun/joseph04-Project-9" target="_blank">Github Link</a>
                 <a href="https://youtu.be/MgMOBCPjuho" target="_blank">Youtube Demo</a>
             </div>
         </div>
@@ -156,13 +156,13 @@
         <!-- homework 10 -->
         <div class="card">
             <div class="card-header">
-                <h2>Assignment 10: PCA and embeddings</h2>
+                <h2>Project 10: PCA and embeddings</h2>
             </div>
             <div class="card-content">
                 <ul>
                     <li>Use CLIP embeddings and PCA to find the most similar image to a user query</li>
                 </ul>
-                <a href="https://github.com/joseph-aoun/joseph04-assignment-10" target="_blank">Github Link</a>
+                <a href="https://github.com/joseph-aoun/joseph04-Project-10" target="_blank">Github Link</a>
                 <a href="https://www.youtube.com/watch?v=MzReF39xu8w" target="_blank">Youtube Demo</a>
             </div>
         </div>
@@ -170,11 +170,11 @@
         <!-- Extra Points -->
         <div class="card">
             <div class="card-header">
-                <h2>Extra Points</h2>
+                <h2>Extra Worrk!</h2>
             </div>
             <div class="card-content">
                 <ul>
-                    <li>Task: Extra Midterm to predict credict card fraud</li>
+                    <li>Task: Predict credict card fraud</li>
                 </ul>
                 <a href="https://github.com/joseph-aoun/extra-credit" target="_blank">Github Link</a>
             </div>
