--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
                 <li><a href="work-experience">Work Experience</a></li>
                 <li><a href="projects">Projects</a></li>
                 <li><a href="index">About Me</a></li>
+                <li><a href="assignments">Data Science / Machine Learning</a></li>
             </ul>
             <hr> 
         </nav>
