--- a/assignments.html
+++ b/assignments.html
@@ -180,7 +180,19 @@
             </div>
         </div>
 
-        
+        <!-- Boston  -->
+        <div class="card">
+            <div class="card-header">
+                <h2>Boston Budget Analysis</h2>
+            </div>
+            <div class="card-content">
+                <ul>
+                    <li>Task: Analyze Boston Budget Spending</li>
+                </ul>
+                <a href="https://github.com/joseph-aoun/Boston-Project" target="_blank">Github Link</a>
+            </div>
+        </div>
+
         </div>
 
     </body>
