--- a/projects.html
+++ b/projects.html
@@ -34,6 +34,19 @@
                 </div>
             </div>
 
+             <!-- Paper  -->
+            <div class="card">
+                <div class="card-header">
+                    <h2>TinyML Paper</h2>
+                </div>
+                <div class="card-content">
+                    <ul>
+                        <li>Task: Analyze Boston Budget Spending</li>
+                    </ul>
+                    <a href="https://github.com/joseph-aoun/TinyML-Model-Compression-Paper" target="_blank">Github Link</a>
+                </div>
+            </div>
+
             <div class="card">
                 <div class="card-header">
                     <h2>Chinese Character Predictor</h2>
