--- a/projects.html
+++ b/projects.html
@@ -41,7 +41,9 @@
                 </div>
                 <div class="card-content">
                     <ul>
-                        <li>Task: Analyze Boston Budget Spending</li>
+                        <li>Compressing TinyML models using quantization, pruning, and Clustering.</li>
+                        <li>Implemented a TinyML model compression pipeline using <strong>Python</strong> and <strong>TensorFlow Lite</strong>.</li>
+                        <li>Evaluated the performance of different compression techniques on TinyML models and compared the results.</li>
                     </ul>
                     <a href="https://github.com/joseph-aoun/TinyML-Model-Compression-Paper" target="_blank">Github Link</a>
                 </div>
